Remove all inline styles
Use styling provided by bootstrap where we can, otherwise
use our own styling instead of inline styles.

--- a/examples/app.css
+++ b/examples/app.css
@@ -6,6 +6,14 @@
     width: 100%;
 }
 
+#logs-header {
+    margin-top: 20px;
+}
+
+.preserve-whitespace {
+    white-space: pre-wrap;
+}
+
 video {
     width: 100%;
 }
